--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.8.0",
+    "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-express": "^10.0.0",
+    "graphql": "^16.7.1",
     "kysely": "^0.26.1",
+    "nestjs-kysely": "^0.1.4",
+    "pg": "^8.11.1",
     "prisma-kysely": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -73,7 +79,9 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/db(|/.*)$": "<rootDir>/libs/db/src/$1"
+      "^@app/db(|/.*)$": "<rootDir>/libs/db/src/$1",
+      "^@app/users(|/.*)$": "<rootDir>/libs/users/src/$1",
+      "^@app/posts(|/.*)$": "<rootDir>/libs/posts/src/$1"
     }
   },
   "prisma": {
